학습 유틸에 강제로 2개의 손으로 데이터셋을 만드는 옵션 추가

--- a/resource/main_form.ui
+++ b/resource/main_form.ui
@@ -192,6 +192,17 @@
         </layout>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_7">
+         <item>
+          <widget class="QCheckBox" name="two_hand_checkBox">
+           <property name="text">
+            <string>2개의 손을 학습 시키도록 고정</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
           <widget class="QLabel" name="label_3">
