--- a/resource/main_form.ui
+++ b/resource/main_form.ui
@@ -421,6 +421,16 @@
         </layout>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_8"/>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="test_cam_use_check">
+         <property name="text">
+          <string>웹캠을 이용해서 테스트</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <layout class="QVBoxLayout" name="verticalLayout_13">
          <item>
           <widget class="QListWidget" name="test_dataset_list"/>
